--- a/EncriptarCadenasTexto/EncriptarCadenasTexto.csproj
+++ b/EncriptarCadenasTexto/EncriptarCadenasTexto.csproj
@@ -6,6 +6,11 @@
     <Nullable>enable</Nullable>
     <UseWindowsForms>true</UseWindowsForms>
     <ImplicitUsings>enable</ImplicitUsings>
+    <ApplicationIcon>Imagenes\favicon.ico</ApplicationIcon>
   </PropertyGroup>
+
+  <ItemGroup>
+    <Content Include="Imagenes\favicon.ico" />
+  </ItemGroup>
 
 </Project>
